--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cd frontend && yarn && yarn start",
-    "server": "cd backend && yarn && yarn start"
+    "server": "cd backend && yarn && yarn server"
   },
   "keywords": [],
   "author": "",
