--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-twitter-auth": "^0.0.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
