--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-twitter-auth": "^0.0.13",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
