--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-intl": "^6.3.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-twitter-auth": "^0.0.13",
