--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,16 @@
     "@babel/preset-env": "^7.20.2"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-twitter-token": "^1.3.0",
     "pg": "^8.10.0",
+    "request": "^2.88.2",
     "sequelize": "^6.31.0"
   }
 }
