change settings size

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intl": "^6.3.2",
