--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^5.4.4",
     "react-bootstrap": "^2.7.4",
     "react-modal": "^3.16.1",
     "use-sync-external-store": "^1.2.0"
