--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
