--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intl": "^6.3.2",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
