--- a/backend/package.json
+++ b/backend/package.json
@@ -21,15 +21,18 @@
   "dependencies": {
     "axios": "^1.3.6",
     "cors": "^2.8.5",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
     "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-twitter-token": "^1.3.0",
     "pg": "^8.10.0",
     "request": "^2.88.2",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "speakeasy": "^2.0.0"
   }
 }
