--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.4.4",
     "react-bootstrap": "^2.7.4",
     "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.2",
     "use-sync-external-store": "^1.2.0"
   }
 }
