--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.36.4",
     "cors": "^2.8.5",
     "deep-email-validator": "^0.1.21",
