--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "react-twitter-auth": "^0.0.13",
     "sass": "^1.62.0",
