search bar function & deploy try

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "SDM Group 5",
   "main": "index.js",
   "scripts": {
-    "start": "cd frontend && yarn && yarn start",
-    "server": "cd backend && yarn && yarn start"
+    "start": "cd frontend && yarn start",
+    "server": "cd backend && yarn server",
+    "install:prod": "cd frontend && yarn install --freeze-lockfile && cd ../backend && yarn install --freeze-lockfile",
+    "build": "cd frontend && yarn build",
+    "deploy": "cd backend && yarn deploy"
   },
   "keywords": [],
   "author": "",
