--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js --ext js --watch src --exec babel-node",
-    "deploy": "NODE_ENV=production babel-node src/server.js"
+    "deploy": "NODE_ENV=production babel-node src/server.js",
+    "deploy-win": "set NODE_ENV=production&&babel-node src/server.js"
   },
   "keywords": [],
   "author": "",
