--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-twitter-token": "^1.3.0",
+    "path": "^0.12.7",
     "pg": "^8.10.0",
     "request": "^2.88.2",
     "sequelize": "^6.31.0",
