--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "cd frontend && yarn && yarn start",
-    "server": "cd backend && yarn && yarn start"
+    "server": "cd backend && yarn && yarn start",
+    "install:prod": "cd frontend && yarn install --freeze-lockfile && cd ../backend && yarn install --freeze-lockfile",
+    "build": "cd frontend && yarn build",
+    "deploy": "cd backend && yarn deploy"
   },
   "keywords": [],
   "author": "",
