--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@google-cloud/translate": "^7.2.1",
     "antd": "^5.4.4",
     "react-bootstrap": "^2.7.4",
