--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.7.4",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.2",
+    "socket.io-client": "^4.6.1",
     "use-sync-external-store": "^1.2.0"
   }
 }
