--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
